--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,6 @@
     @apply flex items-center gap-1.5 text-slate-400;
   }
   .dropMenu {
-    @apply w-full py-2 pl-2 capitalize text-lg text-slate-600 font-semibold hover:text-slate-200 cursor-pointer;
+    @apply w-full py-2 pl-2 capitalize text-lg text-slate-600 font-semibold hover:text-slate-200 cursor-pointer transition-all;
   }
 }
