--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
   background-size: cover;
   background-position: center;
 }
-@layer components {
+@layer base {
   .grad {
     @apply bg-gradient-to-r from-pink-600 to-indigo-500;
   }
@@ -16,8 +16,5 @@
   }
   .windInfoDiv {
     @apply flex items-center gap-1.5 text-slate-400;
-  }
-  .dropMenu {
-    @apply w-full py-2 pl-2 capitalize text-lg text-slate-600 font-semibold hover:text-slate-200 cursor-pointer transition-all;
   }
 }
